FinFamily Release notes

At least for now releases follow the Subversion revision numbers. Numbers in the headers show download counts for the older version. Earlier release notes are in releasenotes0172

* Added code to restore backup directly from zip-file

Release 747 on 7 sep 2010

* Added database view font size to settings
* Added subject to relatives pane
* Added report command to drop down menu in relatives pane
* Fixed some report style issues (Bethrotal, From table text moved after name of subject)

Release 735 on 4 sep 2010

* Bugfixes
  - to text search and
  - Cancel button in runner dialogs
  - Child spouse numbering

Release 714 on 3 sep 2010

* fixed problems in import from Suku2004
* Allowing surnames to begin with lower case letter at update. 
  For new surnames the 1st letter is capitalized

Release 710 on 1 sep 2010

* Family notice to use same layout as Table notice
* Fixed problem with file dialog hiding behind 
* Map location algorithm modified 
* Fix to gedcom import error report
* Person view field handling fix
* Address stored incorrectly in backup. Fixed
* Allow empty line in front of n note ield

Release 700 on 31 aug 2010

* Fixes to  column sorting
* Some German locations added for german sample database (under construction)
* Patronyme endings enchanced

Release 695 on 26 aug 2010

* Added option to print all ancestor branches
* Update family tree and database draft whenever person is changed
* Modified spouses parents see also printing
* GUI changed to use RadioButtons for sex instead of combobox
* Fixes to check when person has changed => not so many unnecessary updates

Release 680 on 20 aug 2010

* Added possibilty to print pictures separately at end of document with links to tables. 
  Pictures are to be organized manually afterwords
* Added styles to descendant report

Release 678 on 17 aug 2010

* Bugfixes

Release 671 on 14 aug 2010

* Some gedcom fixes regarding FAM record