@@ -2,7 +2,10 @@ FinFamily Release notes
 
 At least for now releases follow the Subversion revision numbers. Numbers in the headers show download counts for the older version. Earlier release notes are in releasenotes0172
 
+Release 764 on 10 sep 2010
+
 * Added code to restore backup directly from zip-file
+* Added parents to subject in descendant report
 
 Release 747 on 7 sep 2010
 
